--- a/index.html
+++ b/index.html
@@ -77,8 +77,8 @@
         <h4>History:</h4>
         <span id="node-history"></span>
 
-        <h4>Companies:</h4>
-        <span id="node-companies"></span>
+        <h4>Projects:</h4>
+        <span id="node-projects"></span>
 
         <h4>Labs:</h4>
         <span id="node-labs"></span>
